--- a/_site.yml
+++ b/_site.yml
@@ -3,9 +3,5 @@ navbar:
   title: "MyLabJournal"
   left:
     - text: "Home"
-      href: index.html
-    - text: "Journal"
-      href: Journal.html
-    - text: "Links"
-      href: Links.html
+      href: test_web.html
 output_dir: "docs"
